--- a/app/views/cabecalho.html
+++ b/app/views/cabecalho.html
@@ -8,8 +8,7 @@
   <div class="collapse navbar-collapse" id="navbarCollapse">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="index.html">Principal
-          <span class="sr-only">(current)</span>
+        <a class="nav-link" href="#">Principal
         </a>
       </li>
       <li class="nav-item">
@@ -27,9 +26,6 @@
       <a class="btn btn-outline-secondary my-2 my-sm-0" ui-sref="app.resultadobusca({palavra: buscaPalavra})">
           Pesquise
       </a>
-      <!--
-      <button class="btn btn-outline-secondary my-2 my-sm-0" type="submit">Pesquise</button>
-      -->
     </form>
   </div>
 </nav>
