--- a/app/styles/footer-distributed-with-address-and-phones.css
+++ b/app/styles/footer-distributed-with-address-and-phones.css
@@ -1,6 +1,3 @@
-.nav{
-	background-color: #03124a;
-}
 .footer-distributed{
 	background-color: #03124a;
 	box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
@@ -175,4 +172,28 @@
 		margin-left: 0;
 	}
 
+}
+
+@media (min-width: 576px) {
+    .card-columns {
+        column-count: 2;
+    }
+}
+
+@media (min-width: 768px) {
+    .card-columns {
+        column-count: 2;
+    }
+}
+
+@media (min-width: 992px) {
+    .card-columns {
+        column-count: 2;
+    }
+}
+
+@media (min-width: 1200px) {
+    .card-columns {
+        column-count: 2;
+    }
 }
