--- a/app/views/cabecalho.html
+++ b/app/views/cabecalho.html
@@ -1,4 +1,5 @@
 <!-- Fixed navbar -->
+<br>
 <nav class="navbar navbar-expand-md navbar-dark fixed-top" style="background-color: #03124a;">
   <a class="navbar-brand" href="#"></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse"
@@ -23,7 +24,7 @@
     </ul>
     <form class="form-inline mt-2 mt-md-0">
       <input class="form-control mr-sm-2" type="text" placeholder="Pesquise" aria-label="Search" ng-model="buscaPalavra">
-      <a class="btn btn-outline-secondary my-2 my-sm-0" ui-sref="app.resultadobusca({palavra: buscaPalavra})">
+      <a class="btn btn-outline-secondary my-2 my-sm-0 text-white" ui-sref="app.resultadobusca({palavra: buscaPalavra})">
           Pesquise
       </a>
     </form>
