--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,106 +1,115 @@
-<div>
-    <br>
-    <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img class="d-block w-100" src="images/banner_img/1.png" alt="First slide">
+<div class="row">
+    <div class="col-sm-10">
+        <br>
+
+
+        <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+            <div class="carousel-inner" role="listbox">
+                <div class="carousel-item active">
+                    <img class="d-block img-fluid" src="images/banner_img/1.png" alt="First slide">
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block img-fluid" src="images/banner_img/2.jpg" alt="Second slide">
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block img-fluid" src="images/banner_img/3.jpg" alt="Third slide">
+                </div>
             </div>
-            <div class="carousel-item">
-                <img class="d-block w-100" src="images/banner_img/2.jpg" alt="Second slide">
-            </div>
-            <div class="carousel-item">
-                <img class="d-block w-100" src="images/banner_img/3.jpg" alt="Third slide">
+            <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </a>
+        </div>
+
+        <div style="width:100%; height:35px; margin-bottom:0px;">
+            <div style="display: inline-table; width:100%; border:none;">
+                <div style="float:left; width:auto; height:auto; border-bottom:solid 12px #2f3b66;">
+                    <h2 style="margin:0px; font-weight:normal; font-size:16pt;">Destaques:</h2>
+                </div>
             </div>
         </div>
-        <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-        </a>
-        <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-        </a>
+        <hr>
+        <br>
+        <table border="0">
+            <tr>
+                <th>
+                    <h1></h1>
+                </th>
+                <th></th>
+            </tr>
+            <tr>
+                <td>
+                    <img src="images\teste01.jpg" style="float: left; margin-right:20px; margin-bottom:12px; border-radius:18px;">
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit
+                    </p>
+                </td>
+                <td>
+                    <img src="images\teste02.jpg" style="float: left; margin-right:20px; margin-bottom:12px; border-radius:18px;">
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit
+                    </p>
+                </td>
+            </tr>
+            <tr>
+                <td></td>
+            </tr>
+        </table>
+        <p align="justify">O Portal Grande Colorada é um espaço virtual com conteúdo dedicado ao grande Colorado e região, onde os moradores
+            e frequentadores dos bairros podem contar com serviços e informações de utilidade e qualidade.
+        </p>
+        Leia mais...
+        <br>
+        <br>
+        <h2>
+            <span>VANTAGENS DE TER SEU ANÚNCIO AQUI!</span>
+        </h2>
+        <p></p>
+        <center>
+            <img src="images/img_2.png" width="100%" />
+        </center>
+        <br>
+        <p align="justify">Alguém está procurando por sua Empresa neste exato momento! Fale conosco e agende a visita de um consultor, ele lhe
+            apresentará o melhor plano de publicidade. A mídia tradicional como rádio, tv, revista, jornal, panfletos, outdoors
+            e outros veículos de comunicação vêm perdendo espaço para a mídia digital, e o nosso guia destaca-se justamente
+            nesta área, aproveite e confira nossos planos.
+        </p>
+        <button type="button" class="btn btn-secondary">Saiba mais</button>
+        <br>
+        <br>
+        <!-- CARDS !-->
+        <div class="card-deck">
+            <div class="card">
+                <img class="card-img-top" src="images/anuncie_2.png" alt="Card image cap">
+                <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
+                </div>
+                <div class="card-footer">
+                    <small class="text-muted">Portal Grande Colorado</small>
+                </div>
+            </div>
+            <div class="card">
+                <img class="card-img-top" src="images/anuncie_2.png" alt="Card image cap">
+                <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                </div>
+                <div class="card-footer">
+                    <small class="text-muted">Portal Grande Colorado</small>
+                </div>
+            </div>
+        </div>
+        <!-- CARDS !-->
+        <br>
+        <br>
     </div>
-    <div style="width:100%; height:35px; margin-bottom:0px;">
-        <div style="display: inline-table; width:100%; border:none;">
-            <div style="float:left; width:auto; height:auto; border-bottom:solid 12px #2f3b66;">
-                <h2 style="margin:0px; font-weight:normal; font-size:16pt;">Destaques:</h2>
-            </div>
-        </div>
+    <div class="col-sm-2">
+        <br>
+        <img src="images/formato_anuncio_arranhaceu.png">
     </div>
-    <hr>
-    <br>
-    <table border="0">
-        <tr>
-            <th>
-                <h1></h1>
-            </th>
-            <th></th>
-        </tr>
-        <tr>
-            <td>
-                <img src="images\teste01.jpg" style="float: left; margin-right:20px; margin-bottom:12px; border-radius:18px;">
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit
-                </p>
-            </td>
-            <td>
-                <img src="images\teste02.jpg" style="float: left; margin-right:20px; margin-bottom:12px; border-radius:18px;">
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit
-                </p>
-            </td>
-        </tr>
-        <tr>
-            <td></td>
-        </tr>
-    </table>
-    <p align="justify">O Portal Grande Colorada é um espaço virtual com conteúdo dedicado ao grande Colorado e região, onde os moradores e frequentadores
-        dos bairros podem contar com serviços e informações de utilidade e qualidade.
-    </p>
-    Leia mais...
-    <br>
-    <br>
-    <h2>
-        <span>VANTAGENS DE TER SEU ANÚNCIO AQUI!</span>
-    </h2>
-    <p></p>
-    <center>
-        <img src="images/img_2.png" width="100%" />
-    </center>
-    <br>
-    <p align="justify">Alguém está procurando por sua Empresa neste exato momento! Fale conosco e agende a visita de um consultor, ele lhe apresentará
-        o melhor plano de publicidade. A mídia tradicional como rádio, tv, revista, jornal, panfletos, outdoors e outros
-        veículos de comunicação vêm perdendo espaço para a mídia digital, e o nosso guia destaca-se justamente nesta área,
-        aproveite e confira nossos planos.
-    </p>
-    <button type="button" class="btn btn-secondary">Saiba mais</button>
-    <br>
-    <br>
-    <!-- CARDS !-->
-    <div class="card-deck">
-        <div class="card">
-            <img class="card-img-top" src="images/anuncie_2.png" alt="Card image cap">
-            <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
-            </div>
-            <div class="card-footer">
-                <small class="text-muted">Portal Grande Colorado</small>
-            </div>
-        </div>
-        <div class="card">
-            <img class="card-img-top" src="images/anuncie_2.png" alt="Card image cap">
-            <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-            </div>
-            <div class="card-footer">
-                <small class="text-muted">Portal Grande Colorado</small>
-            </div>
-        </div>
-    </div>
-    <!-- CARDS !-->
-    <br>
-    <br>
 </div>
