Alterações no layout e eliminação de registros exibidos em duplicidade

--- a/app/views/anuncie.html
+++ b/app/views/anuncie.html
@@ -1,103 +1,67 @@
-<div style="width:100%; height:35px; margin-bottom:20px;">
-  <div style="display: inline-table; width:100%; border:none">
-    <div style="float:left; width:auto; height:auto; border-bottom:solid 12px #2f3b66;">
-      <h2 style="margin:0px; font-weight:normal; font-size:16pt;">Anuncie Aqui:</h2>
+
+<br>
+<center><H4>ANUNCIE</H4></center>
+<p align="justify">
+O Portal Grande Colorado é um espaço virtual dedicado ao de anúncio de empresas e profissionais liberais que atuam no bairro Grande Colorado e regiões próximas (DF 425, Região dos Lagos, Setor de Mansões, Sobradinho I e Sobradinho II). Seu objetivo é servir como canal de comunicação entre moradores e comerciantes, facilitando a aquisição de produtos e a contratação de serviços.
+</P>
+
+<p align="center">Divulgue sua empresa no portal e apareça para todo a população dentro da sua região.</p>
+<center><img src="images/banner-anuncie.png" width="80%"></center>
+<div class="clr"></div>
+
+<p align="justify">
+Você e sua empresa estarão na internet ativamente, 24 horas por dia, facilitando sua localização para quem procura por seus produtos e serviços.
+
+<p align="justify">
+A internet é o veículo mais utilizado pela maioria das pessoas nas buscas por produtos e serviços, com os melhores resultados para os anunciantes, e menor investimento comparado a outros tipos de mídia.<BR></p>
+<center><img src="images/banner-anuncie2.jpg" width="80%"></center>
+
+    
+
+<br>
+Alcance pessoas que buscam exatamente por seus serviços na internet, seja no bairro ou no Distrito Federal inteiro.<br>
+<center> Seu anúncio pode ser cadastrado nos seguintes formatos:</center>
+
+
+
+<img src="images/anuncio_destaque.png"><br>
+Exposição: Categorias do Guia
+Tipos de Mídia: Cadastro<br>
+Valor: R$ 384,00<br>
+Período: 1 ano<br>
+Obs: Os anúncios deste formato
+possuem também uma página
+exclusiva com mais informações (Hotsite).
+<br><br>
+<hr>
+
+<img src="images/anuncio_destaque2.png"><br>
+Exposição: Categorias do Guia
+O cadastro simples aparece logo abaixo dos anúncios de formato Destaque, 
+informando apenas o título do anúncio, 1 telefone e uma rápida descrição da atividade da empresa.
+   
+<br><br>
+
+
+
+<center><H5>Solicite um representante</H5></center>
+
+<center>
+  <table >
+  <tbody>
+    <tr>
+      <td> <a href="https://api.whatsapp.com/send?1=pt_BR&phone=5561991424946"><img src="images/whatsapp.png" align="center"></a></td>
+      <td><font color="white" size="2"><a href="https://api.whatsapp.com/send?1=pt_BR&phone=5561991424946">Fale direto pelo Whatsapp:</a></font><br><h4><a href="https://api.whatsapp.com/send?1=pt_BR&phone=5561991424946">(61) 99142-4946</a></h4></td>
+    </tr>
+  </tbody>
+</table>
+</center>
+
+
+
     </div>
-  </div>
-  <div style="display: inline-table; width:100%; height:5px; border-top:dashed 1px #2f3b66; text-align:left;">
-    <img src="../images/seta_titulo_azul2.png" style="margin-left:10px;">
+   
   </div>
 </div>
-<p>
-  <div class="article">
-    <p align="justify">
-      <H5>Divulgue sua empresa no
-        <b>Portal Grande Colorado</b> e apareça para todo a população dentro da sua região.</H5>
-    </p>
-    <img src="../images/banner-anuncie.png">
-    <div class="clr"></div>
-    <p align="justify">
-      <H5>Você e sua empresa estarão na internet ativamente, 24 horas por dia, facilitando sua localização para quem procura
-        por seus produtos e serviços.</H5>
-      <p align="justify">
-        <H5>
-          A internet é o veículo mais utilizado pela maioria das pessoas nas buscas por produtos e serviços, com os melhores resultados
-          para os anunciantes, e menor investimento comparado a outros tipos de mídia.
-          <BR>
-        </H5>
-      </p>
-      <img src="../images/banner-anuncie2.jpg">
-      <div class="clr"></div>
-      <br>
-      <H5>Alcance pessoas que buscam exatamente por seus serviços na internet, seja no bairro ou no Distrito Federal inteiro.
-      </H5>
-      <br>
-      <center>
-        <H5>Seu anúncio pode ser cadastrado nos seguintes formatos:</H5>
-      </center>
-      <div class="clr"></div>
-      <br>
-      <center>
-        <table>
-          <tbody>
-            <tr>
-              <td>
-                <img src="../images/anuncio_destaque.png" align="center">
-              </td>
-              <td>
-                <font color="black" size="2">Exposição: Categorias do Guia
-                  <br> Dimensão: 768x200 px
-                  <br> Tipos de Mídia: Cadastro
-                  <br> Valor: R$ 384,00
-                  <br> Período: 1 ano
-                  <br> Obs: Os anúncios deste formato possuem também uma página exclusiva com mais informações (Hotsite).
-              </td>
-            </tr>
-          </tbody>
-        </table>
-      </center>
-      <div class="clr"></div>
-      <br>
-      <center>
-        <table>
-          <tbody>
-            <tr>
-              <td>
-                <img src="../images/anuncio_destaque2.png" align="center">
-              </td>
-              <td>
-                <font color="black" size="2">Exposição: Categorias do Guia
-                  <br> O cadastro simples aparece logo abaixo dos anúncios de formato Destaque, informando apenas o título do
-                  anúncio, 1 telefone e uma rápida descrição da atividade da empresa.</td>
-            </tr>
-          </tbody>
-        </table>
-      </center>
-      <div class="clr"></div>
-      <br>
-      <center>
-        <H5>Solicite um representante</H5>
-      </center>
-  </div>
-  <center>
-    <table>
-      <tbody>
-        <tr>
-          <td>
-            <a href="https://api.whatsapp.com/send?1=pt_BR&phone=5561991424946">
-              <img src="../images/whatsapp.png" align="center">
-            </a>
-          </td>
-          <td>
-            <font color="white" size="2">
-              <a href="https://api.whatsapp.com/send?1=pt_BR&phone=5561991424946">Fale direto pelo Whatsapp:</a>
-            </font>
-            <br>
-            <h4>
-              <a href="https://api.whatsapp.com/send?1=pt_BR&phone=5561991424946">(61) 99142-4946</a>
-            </h4>
-          </td>
-        </tr>
-      </tbody>
-    </table>
-  </center>
+<br>
+<center><img src="images/mapaportal.jpg"></center>  
