--- a/app/views/empresa.html
+++ b/app/views/empresa.html
@@ -15,14 +15,14 @@
 </div>
 
 <div class="list-group">
-    <p class="list-group-item">Endereço: {{empresa.endereco}}</p>
-    <p class="list-group-item">Telefones: {{empresa.telefone}}</p>
-    <p class="list-group-item">Celular: {{empresa.celular}}</p>
-    <p class="list-group-item">Site: {{empresa.site}}</p>
-    <p class="list-group-item">E-mail: {{empresa.email}}</p>
-    <p class="list-group-item">Facebook: {{empresa.facebook}}</p>
-    <p class="list-group-item">Instagram: {{empresa.instagram}}</p>
-    <p class="list-group-item">Twitter: {{empresa.twitter}}</p>
+  <p class="list-group-item"><img src="images/empresa-gps.png"> <b>{{empresa.endereco}}</b></p>
+  <p class="list-group-item"><img src="images/empresa-phone.png"> {{empresa.telefone}}</p>
+  <p class="list-group-item"><img src="images/empresa-smartphone.png"> {{empresa.celular}}</p>
+  <p class="list-group-item"><img src="images/empresa-www.png"> <a href="{{empresa.site}}" target="outpage"> {{empresa.site}}</p></a>
+  <p class="list-group-item"><img src="images/empresa-email.png"> {{empresa.email}}</p>
+  <p class="list-group-item"><img src="images/empresa-facebook.png"> <a href="{{empresa.site}}" target="outpage">{{empresa.facebook}}</p></a>
+  <p class="list-group-item"><img src="images/empresa-instagram.png"> <a href="{{empresa.site}}" target="outpage">{{empresa.instagram}}</p></a>
+  <p class="list-group-item"><img src="images/empresa-twitter.png"> <a href="{{empresa.site}}" target="outpage">{{empresa.twitter}}</p></a>
 
 
 
