--- a/app/views/main.html
+++ b/app/views/main.html
@@ -2,26 +2,54 @@
     <div class="col-sm-10">
         <br>
 
-
+        <!--
         <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner" role="listbox">
                 <div class="carousel-item active">
-                    <img class="d-block img-fluid" src="images/banner_img/1.png" alt="First slide">
+                    <img class="d-block img-fluid" src="images/banner_img/1.png" alt="Primeiro slide">
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block img-fluid" src="images/banner_img/2.jpg" alt="Second slide">
+                    <img class="d-block img-fluid" src="images/banner_img/2.jpg" alt="Segundo slide">
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block img-fluid" src="images/banner_img/3.jpg" alt="Third slide">
+                    <img class="d-block img-fluid" src="images/banner_img/3.jpg" alt="Terceiro slide">
                 </div>
             </div>
             <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="sr-only">Previous</span>
+                <span class="sr-only">Anterior</span>
             </a>
             <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
                 <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="sr-only">Next</span>
+                <span class="sr-only">Próximo</span>
+            </a>
+        </div>
+    -->
+
+        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+            <ol class="carousel-indicators">
+                <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+            </ol>
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img class="d-block w-100" src="images/banner_img/1.png" alt="Primeiro slide">
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block w-100" src="images/banner_img/2.jpg" alt="Segundo slide">
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block w-100" src="images/banner_img/3.jpg" alt="Terceiro slide">
+                </div>
+            </div>
+            <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Anterior</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Próximo</span>
             </a>
         </div>
 
@@ -59,15 +87,19 @@
                 <td></td>
             </tr>
         </table>
-        <p align="justify">O Portal Grande Colorada é um espaço virtual com conteúdo dedicado ao grande Colorado e região, onde os moradores
-            e frequentadores dos bairros podem contar com serviços e informações de utilidade e qualidade.
-        </p>
-        Leia mais...
+        <p align="justify">
+            O Portal Grande Colorado é um espaço virtual dedicado ao de anúncio de empresas e profissionais liberais que atuam no bairro
+            Grande Colorado e regiões próximas (DF 425, Região dos Lagos, Setor de Mansões, Sobradinho I e Sobradinho II).
+            Seu objetivo é servir como canal de comunicação entre moradores e comerciantes, facilitando a aquisição de produtos
+            e a contratação de serviços. </p>
+        <a ui-sref="app.anuncieaqui">
+            <button type="button" class="btn btn-warning">Leia Mais</button>
+        </a>
         <br>
         <br>
-        <h2>
+        <h3>
             <span>VANTAGENS DE TER SEU ANÚNCIO AQUI!</span>
-        </h2>
+        </h3>
         <p></p>
         <center>
             <img src="images/img_2.png" width="100%" />
@@ -78,7 +110,9 @@
             e outros veículos de comunicação vêm perdendo espaço para a mídia digital, e o nosso guia destaca-se justamente
             nesta área, aproveite e confira nossos planos.
         </p>
-        <button type="button" class="btn btn-secondary">Saiba mais</button>
+        <a ui-sref="app.anuncieaqui">
+            <button type="button" class="btn btn-warning">Leia Mais</button>
+        </a>
         <br>
         <br>
         <!-- CARDS !-->
@@ -113,3 +147,7 @@
         <img src="images/formato_anuncio_arranhaceu.png">
     </div>
 </div>
+
+<script>
+    $('.carouselExampleIndicators').carousel({ cycle: true });
+</script>
