--- a/app/views/rodape.html
+++ b/app/views/rodape.html
@@ -39,21 +39,13 @@
                     </tr>
                 </tbody>
             </table>
-        </center>
+  
         <br>
         <font color="white" size="3">&nbsp Parceiros:</font>
-        <a href="#">
-            <img src="images/gallery_1.jpg" width="58" height="58" />
-        </a>
-        <a href="#">
-            <img src="images/gallery_2.jpg" width="58" height="58" alt="" />
-        </a>
-        <a href="#">
-            <img src="images/gallery_3.jpg" width="58" height="58" alt="" />
-        </a>
-        <a href="#">
-            <img src="images/gallery_4.jpg" width="58" height="58" alt="" />
-        </a>
+         <a href="http://videovisual.com.br/"><img src="images/parceiro_videovisual.png"></a> 
+         <a href="#"><img src="images/parceiros.png"></a> 
+         <a href="#"><img src="images/parceiros.png"></a> 
+                </center>
     </div>
 
     <div class="footer-right">
@@ -74,8 +66,7 @@
 
 <div class="footer_laranja">
     <center>
-        Desenvolvido por
-        <a href="videovisual.com.br">videovisual.com.br</a>
+		Desenvolvido por <a href="http://videovisual.com.br/"><font color="white">videovisual.com.br</a></font>
     </center>
 </div>
 <!-- Footer FIM-->
