--- a/app/views/subcategoria.html
+++ b/app/views/subcategoria.html
@@ -4,7 +4,8 @@
 </center>
 <br>
 <div class="article">
-  <h5>Categoria: <img ng-src="{{subcategoria.categoria.icone}}" align="center"> {{subcategoria.categoria.nome}}</h5>
+  <h5>
+    <img ng-src="{{subcategoria.categoria.icone}}" align="center"> {{subcategoria.categoria.nome}}</h5>
   <h5>Subcategoria: {{subcategoria.nome}}</h5>
   <br>
 </div>
@@ -20,8 +21,9 @@
 <hr>
 <br>
 <!--Cards para DESTAQUES-->
+<!--
 <div class="card-columns">
-  <div class="card" ng-repeat="catsEmp in destaques">
+  <div class="card" ng-repeat="catsEmp in destaques |  unicos : 'empresaId'">
     <a class="text-dark" ui-sref="app.empresa({id: catsEmp.empresaId})">
       <img class="card-img-top" ng-src={{catsEmp.empresa.logo}} alt="Empresa Destaque">
       <div class="card-body">
@@ -35,9 +37,36 @@
   </div>
 </div>
 <hr>
+-->
+<div ng-repeat="catsEmp in destaques | unicos : 'empresaId'">
+  <a class="text-dark" ui-sref="app.empresa({id: catsEmp.empresaId})">
+    <div class="media">
+      <img class="align-self-start mr-3" ng-src={{catsEmp.empresa.logo}} width="30%">
+      <div class="media-body">
+        <h5 class="mt-0">{{catsEmp.empresa.nome}}</h5>
+        <p align="justify">{{catsEmp.empresa.descricao}}</p>
+        <h5 class="mt-0">tel.: {{catsEmp.empresa.telefone}}</h5>
+      </div>
+    </div>
+  </a>
+  <hr>
+</div>
+<!--Fim cards DESTAQUES-->
+
+<div style="width:100%; height:35px; margin-bottom:0px;">
+  <div style="display: inline-table; width:100%; border:none">
+    <div style="float:left; width:auto; height:auto; border-bottom:solid 12px #2f3b66;">
+      <h2 style="margin:0px; font-weight:normal; font-size:16pt;">Empresas - {{categoria.nome}}:</h2>
+    </div>
+  </div>
+</div>
+
+<hr>
+
+<br>
 <!--Fim cards DESTAQUES-->
 <!-- Listagem de Empresas -->
-<div ng-repeat="emp in empresasCategoria">
+<div ng-repeat="emp in empresasCategoria |  unicos : 'empresaId'">
   <div class="media">
     <a ui-sref="app.empresa({id: emp.empresaId})">
       <img class="align-self-center mr-3" height="58" ng-src={{emp.empresa.logo}}>
@@ -46,7 +75,9 @@
       <h5 class="mt-0">{{emp.empresa.nome}}</h5>
       {{emp.empresa.descricao}}
       <br> - {{emp.empresa.endereco}} -
-      <button type="button" class="btn btn-warning">Ver Telefone</button>
+      <a ui-sref="app.empresa({id: emp.empresaId})">
+        <button type="button" class="btn btn-warning">Ver Telefone</button>
+      </a>
     </div>
   </div>
   <hr>
