--- a/app/views/sidebar.html
+++ b/app/views/sidebar.html
@@ -3,26 +3,33 @@
   <h3>Regiões</h3>
 <!--
   <li>
-    <a class="text-dark" href="#">Grande Colorado</a>
-  </li>
--->
-  <li>
-    <a class="text-dark" href="#">DF 425</a>
+    <a class="text-dark" ng-click="alteraRegiao()">Grande Colorado</a>
   </li>
   <li>
-    <a class="text-dark" href="#">Região dos Lagos</a>
-  </li>  
-  <li>
-    <a class="text-dark" href="#">Setor de Mansões</a>
+    <a class="text-dark" ng-click="alteraRegiao(1)">DF - 425</a>
   </li>
   <li>
-    <a class="text-dark" href="#">Sobradinho I</a>
+    <a class="text-dark" ng-click="alteraRegiao(2)">Região dos Lagos</a>
   </li>
   <li>
-    <a class="text-dark" href="#">Sobradinho II</a>
+    <a class="text-dark" ng-click="alteraRegiao(3)">Sobradinho I</a>
+  </li>
+  <li>
+    <a class="text-dark" ng-click="alteraRegiao(4)">Sobradinho II</a>
   </li>
   <br>
-  
+-->
+
+  <select ng-model="regiao" ng-change="alteraRegiao()">
+    <option value="0">Grande Colorado</option>
+    <option value="1">DF - 425</option>
+    <option value="2">Região dos Lagos</option>
+    <option value="3">Sobradinho I</option>
+    <option value="4">Sobradinho II</option>
+  </select>
+  <br>
+  <br>
+
   <div ng-repeat="cat in categorias">
     <a class="text-dark" ui-sref="app.categorias({id: cat.id})">
       <img align="center" height="24" ng-src="{{cat.icone}}" /> &nbsp {{cat.nome}}
