--- a/app/views/empresa.html
+++ b/app/views/empresa.html
@@ -24,7 +24,7 @@
   <p class="list-group-item"><img src="images/empresa-instagram.png"> <a href="{{empresa.site}}" target="outpage">{{empresa.instagram}}</p></a>
   <p class="list-group-item"><img src="images/empresa-twitter.png"> <a href="{{empresa.site}}" target="outpage">{{empresa.twitter}}</p></a>
 
-
+  <div id="map" style="width:100%;height:300px;background:yellow"></div>
 
     <br>
     <!-- GALLERIA -->
@@ -61,3 +61,23 @@
             </div>
         -->
 </div>
+
+
+
+<!--Script necessary to load google maps engine-->
+<script>
+    function initMap() {
+        var mpdft = { lat: -15.7876253, lng: -47.9077034 };//-15.7876253,-47.9077034
+        var map = new google.maps.Map(document.getElementById('map'), {
+            zoom: 16,
+            center: mpdft
+        });
+        var marker = new google.maps.Marker({
+            position: mpdft,
+            map: map,
+            title: "MPDFT"
+        });
+    }
+</script>
+<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCN9jyRa4pqBkGIoPFplJaEcCMrBovbitY&callback=initMap">
+</script>
