--- a/app/views/main.html
+++ b/app/views/main.html
@@ -120,8 +120,8 @@
             <div class="card">
                 <img class="card-img-top" src="images/anuncie_2.png" alt="Card image cap">
                 <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
+                    <h5 class="card-title">Seu Anuncio</h5>
+                    <p class="card-text">Espaço Reservado para o destaque da sua empresa.</p>
                 </div>
                 <div class="card-footer">
                     <small class="text-muted">Portal Grande Colorado</small>
@@ -130,8 +130,8 @@
             <div class="card">
                 <img class="card-img-top" src="images/anuncie_2.png" alt="Card image cap">
                 <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                    <h5 class="card-title">Seu Anuncio</h5>
+                    <p class="card-text">Espaço Reservado para o destaque da sua empresa.</p>
                 </div>
                 <div class="card-footer">
                     <small class="text-muted">Portal Grande Colorado</small>
