--- a/app/views/sobrenos.html
+++ b/app/views/sobrenos.html
@@ -1,36 +1,33 @@
-<!-- Segunda Coluna *CONTEÚDO* -->
-<div class="col-sm-8">
+<BR>
+<center>
+  <img src="images/mapaportal.jpg">
+</center>
 
+<center>
+  <H4>QUEM SOMOS</H4>
+</center>
+<p align="justify">
+  O Portal Grande Colorado é um espaço virtual dedicado ao de anúncio de empresas e profissionais liberais que atuam no bairro
+  Grande Colorado e regiões próximas (DF 425, Região dos Lagos, Setor de Mansões, Sobradinho I e Sobradinho II). Seu objetivo
+  é servir como canal de comunicação entre moradores e comerciantes, facilitando a aquisição de produtos e a contratação
+  de serviços.
   <BR>
-  <center>
-    <img src="images/mapaportal.jpg">
-  </center>
-
-  <center>
-    <H4>QUEM SOMOS</H4>
-  </center>
-  <p align="justify">
-    O Portal Grande Colorado é um espaço virtual dedicado ao de anúncio de empresas e profissionais liberais que atuam no bairro
-    Grande Colorado e regiões próximas (DF 425, Região dos Lagos, Setor de Mansões, Sobradinho I e Sobradinho II). Seu objetivo
-    é servir como canal de comunicação entre moradores e comerciantes, facilitando a aquisição de produtos e a contratação
-    de serviços.
-    <BR>
-    <BR> Criado e administrado por moradores do bairro, o Portal surgiu da percepção da necessidade de concentrar em um site
-    um cadastro dinâmico e completo dos produtos e serviços oferecidos à nossa região, seja pelos comerciantes situados aqui
-    mesmo no Grande Colorado ou em localidades próximas. Pretende-se, assim, que seja consolidado como um veículo de comunicação
-    local confiável e capaz de atender a todos os seus usuários.
-    <BR>
-    <BR> Além de um abrangente guia de serviços e comércios, o Portal Grande Colorado também publica, entre outras informações,
-    artigos, colunas de interesses diversos e informações sobre o que está acontecendo em nosso bairro. Está, ainda, sempre
-    pronto a trazer novos conteúdos, por iniciativa própria ou por sugestão de seus usuários.
-    <BR>
-  </p>
-  <p align="CENTER">
-    Acesse-o e utilize-o. A casa é sua!
-  </P>
+  <BR> Criado e administrado por moradores do bairro, o Portal surgiu da percepção da necessidade de concentrar em um site um
+  cadastro dinâmico e completo dos produtos e serviços oferecidos à nossa região, seja pelos comerciantes situados aqui mesmo
+  no Grande Colorado ou em localidades próximas. Pretende-se, assim, que seja consolidado como um veículo de comunicação
+  local confiável e capaz de atender a todos os seus usuários.
+  <BR>
+  <BR> Além de um abrangente guia de serviços e comércios, o Portal Grande Colorado também publica, entre outras informações,
+  artigos, colunas de interesses diversos e informações sobre o que está acontecendo em nosso bairro. Está, ainda, sempre
+  pronto a trazer novos conteúdos, por iniciativa própria ou por sugestão de seus usuários.
+  <BR>
+</p>
+<p align="CENTER">
+  Acesse-o e utilize-o. A casa é sua!
+</P>
 
 
-  <br>
-  <br>
+<br>
+<br>
 
-  </center>
+</center>
