Exibição de localização no mapa implementada

--- a/app/views/empresa.html
+++ b/app/views/empresa.html
@@ -15,33 +15,79 @@
 </div>
 
 <div class="list-group">
-  <p class="list-group-item"><img src="images/empresa-gps.png"> <b>{{empresa.endereco}}</b></p>
-  <p class="list-group-item"><img src="images/empresa-phone.png"> {{empresa.telefone}}</p>
-  <p class="list-group-item"><img src="images/empresa-smartphone.png"> {{empresa.celular}}</p>
-  <p class="list-group-item"><img src="images/empresa-www.png"> <a href="{{empresa.site}}" target="outpage"> {{empresa.site}}</p></a>
-  <p class="list-group-item"><img src="images/empresa-email.png"> {{empresa.email}}</p>
-  <p class="list-group-item"><img src="images/empresa-facebook.png"> <a href="{{empresa.site}}" target="outpage">{{empresa.facebook}}</p></a>
-  <p class="list-group-item"><img src="images/empresa-instagram.png"> <a href="{{empresa.site}}" target="outpage">{{empresa.instagram}}</p></a>
-  <p class="list-group-item"><img src="images/empresa-twitter.png"> <a href="{{empresa.site}}" target="outpage">{{empresa.twitter}}</p></a>
+    <p class="list-group-item">
+        <img src="images/empresa-gps.png">
+        <b>{{empresa.endereco}}</b>
+    </p>
+    <p class="list-group-item">
+        <img src="images/empresa-phone.png"> {{empresa.telefone}}</p>
+    <p class="list-group-item">
+        <img src="images/empresa-smartphone.png"> {{empresa.celular}}</p>
+    <p class="list-group-item">
+        <img src="images/empresa-www.png">
+        <a href="{{empresa.site}}" target="outpage"> {{empresa.site}}</p>
+    </a>
+    <p class="list-group-item">
+        <img src="images/empresa-email.png"> {{empresa.email}}</p>
+    <p class="list-group-item">
+        <img src="images/empresa-facebook.png">
+        <a href="{{empresa.site}}" target="outpage">{{empresa.facebook}}</p>
+    </a>
+    <p class="list-group-item">
+        <img src="images/empresa-instagram.png">
+        <a href="{{empresa.site}}" target="outpage">{{empresa.instagram}}</p>
+    </a>
+    <p class="list-group-item">
+        <img src="images/empresa-twitter.png">
+        <a href="{{empresa.site}}" target="outpage">{{empresa.twitter}}</p>
+    </a>
 
-  <div id="map" style="width:100%;height:300px;background:yellow"></div>
+    <div id="mapaColorado" style="width:100%;height:400px;"></div>
     <br>
 </div>
 
+
 <!--Script necessary to load google maps engine-->
 <script>
-    function initMap() {
-        var mpdft = { lat: -15.7876253, lng: -47.9077034 };//-15.7876253,-47.9077034
-        var map = new google.maps.Map(document.getElementById('map'), {
-            zoom: 16,
-            center: mpdft
+
+    var marcadores = [];
+    var mapa;
+    var coord = '';
+    var postoColorado = { lat: -15.689690955269533, lng: -47.85949230194092 };
+    // Adiciona o marcador no mapa.
+    function adicionaMarcador(coordenada, mapa) {
+        // Adiciona o marcador na coordenada clicada        
+        if (marcadores.length > 0) {
+            marcadores[0].setMap(null);
+        }
+        marcadores = [];
+        var marcador = new google.maps.Marker({
+            position: coordenada,
+            label: '',
+            map: mapa
         });
-        var marker = new google.maps.Marker({
-            position: mpdft,
-            map: map,
-            title: "MPDFT"
+        mapa.setCenter(coordenada);
+        marcadores.push(marcador);
+        //Atualiza o ng-model com a coordenada
+        var meuInput = $("#coordenada");
+        meuInput.val(JSON.stringify(coordenada));
+        meuInput.trigger('input');
+    }
+
+    function inicializaMapa() {
+        if (coord == '') {
+            coord = postoColorado;
+        }
+        mapa = new google.maps.Map(document.getElementById('mapaColorado'), {
+            zoom: 11,
+            center: coord
+        });
+        // Este event listener chama adicionaMarcador() qdo o mapa for clicado.
+        google.maps.event.addListener(mapa, 'click', function (event) {
+            adicionaMarcador(event.latLng, mapa);
         });
     }
+
 </script>
-<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCN9jyRa4pqBkGIoPFplJaEcCMrBovbitY&callback=initMap">
+<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBsndtkx91Lt1NMI1IRANvDTXUXpkWo1sg&callback=inicializaMapa">
 </script>
