Adição da região grande colorado

--- a/app/views/anuncie.html
+++ b/app/views/anuncie.html
@@ -1,6 +1,20 @@
 
 <br>
-<center><H4>ANUNCIE</H4></center>
+
+<center><H5>Solicite um representante</H5></center>
+
+<center>
+  <table >
+  <tbody>
+    <tr>
+      <td> <a href="https://api.whatsapp.com/send?1=pt_BR&phone=5561991424946"><img src="images/whatsapp.png" align="center"></a></td>
+      <td><font color="white" size="2"><a href="https://api.whatsapp.com/send?1=pt_BR&phone=5561991424946">Fale direto pelo Whatsapp:</a></font><br><h4><a href="https://api.whatsapp.com/send?1=pt_BR&phone=5561991424946">(61) 99142-4946</a></h4></td>
+    </tr>
+  </tbody>
+</table>
+</center>
+
+<center><H4>ANUNCIE NO PORTAL</H4></center>
 <p align="justify">
 O Portal Grande Colorado é um espaço virtual dedicado ao de anúncio de empresas e profissionais liberais que atuam no bairro Grande Colorado e regiões próximas (DF 425, Região dos Lagos, Setor de Mansões, Sobradinho I e Sobradinho II). Seu objetivo é servir como canal de comunicação entre moradores e comerciantes, facilitando a aquisição de produtos e a contratação de serviços.
 </P>
