--- a/app/views/categoria.html
+++ b/app/views/categoria.html
@@ -75,7 +75,7 @@
 <br>
 <!-- Listagem de Empresas -->
 
-<div ng-repeat="emp in empresasCategoria | unicos : 'empresaId'" style="background-image: url(images/fundo.png);">
+<div ng-repeat="emp in empresasCategoria | unicos : 'empresaId'" style="background-image: url(images/.png);">
   <div class="media">
     <a ui-sref="app.empresa({id: emp.empresaId})">
       <img class="align-self-center mr-3" style="border: 1px solid #000; border-radius: 10px;" height="58" ng-src={{emp.empresa.logo}}>
