--- a/app/views/main.html
+++ b/app/views/main.html
@@ -36,6 +36,7 @@
         </div>
         <hr>
         <br>
+      <!--
         <table border="0">
             <tr>
                 <th>
@@ -61,22 +62,24 @@
                 <td></td>
             </tr>
         </table>
+-->
         <p align="justify">
             O Portal Grande Colorado é um espaço virtual dedicado ao de anúncio de empresas e profissionais liberais que atuam no bairro
             Grande Colorado e regiões próximas (DF 425, Região dos Lagos, Setor de Mansões, Sobradinho I e Sobradinho II).
             Seu objetivo é servir como canal de comunicação entre moradores e comerciantes, facilitando a aquisição de produtos
             e a contratação de serviços. </p>
         <a ui-sref="app.anuncieaqui">
-            <button type="button" class="btn btn-warning">Leia Mais</button>
+             <button class="btn" style="background: #f58634; color: #2f3b66;">Leia Mais</button>
         </a>
+      <center><img src="images/mapaportal.jpg"></center> 
         <br>
-        <br>
+        
         <h3>
             <span>VANTAGENS DE TER SEU ANÚNCIO AQUI!</span>
         </h3>
         <p></p>
         <center>
-            <img src="images/img_2.png" width="100%" />
+          <a ui-sref="app.anuncieaqui">  <img src="images/img_2.png" width="100%" /></a>
         </center>
         <br>
         <p align="justify">Alguém está procurando por sua Empresa neste exato momento! Fale conosco e agende a visita de um consultor, ele lhe
@@ -85,14 +88,14 @@
             nesta área, aproveite e confira nossos planos.
         </p>
         <a ui-sref="app.anuncieaqui">
-            <button type="button" class="btn btn-warning">Leia Mais</button>
+             <button class="btn" style="background: #f58634; color: #2f3b66;">Leia Mais</button>
         </a>
         <br>
         <br>
         <!-- CARDS !-->
         <div class="card-deck">
             <div class="card">
-                <img class="card-img-top" src="images/anuncie_2.png" alt="Card image cap">
+                 <a ui-sref="app.anuncieaqui"><img class="card-img-top" src="images/anuncie_2.png" alt="Card image cap"></a>
                 <div class="card-body">
                     <h5 class="card-title">Seu Anuncio</h5>
                     <p class="card-text">Espaço Reservado para o destaque da sua empresa.</p>
@@ -102,7 +105,7 @@
                 </div>
             </div>
             <div class="card">
-                <img class="card-img-top" src="images/anuncie_2.png" alt="Card image cap">
+                <a ui-sref="app.anuncieaqui"> <img class="card-img-top" src="images/anuncie_2.png" alt="Card image cap"> </a>
                 <div class="card-body">
                     <h5 class="card-title">Seu Anuncio</h5>
                     <p class="card-text">Espaço Reservado para o destaque da sua empresa.</p>
@@ -118,7 +121,7 @@
     </div>
     <div class="col-sm-2">
         <br>
-        <img src="images/formato_anuncio_arranhaceu.png">
+      <a ui-sref="app.anuncieaqui"> <img src="images/formato_anuncio_arranhaceu.png"></a>
     </div>
 </div>
 <script>
