--- a/app/views/rodape.html
+++ b/app/views/rodape.html
@@ -7,9 +7,9 @@
             ·
             <a ui-sref="app.anuncieaqui">Anuncie</a>
             ·
-            <a href="#">Contato</a>
+             <a ui-sref="app.contato">Contato</a>
             ·
-            <a href="#">Sobre Nós</a>
+            <a ui-sref="app.sobrenos">Sobre nós</a>
         </p>
         <p class="footer-company-name">Portal Grande Colorado &copy; 2018</p>
     </div>
@@ -55,7 +55,7 @@
         <img src="images\instagram.png">
         <br>
         <br>
-        <font color="white" size="2">contato@portalgrandecolorado.com.br</font>
+        <font color="white" size="2">portalgrandecoloradodf@gmail.com</font>
     </div>
 </footer>
 
